add more tmux cmd refrences in comments

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,3 +15,33 @@ setw -g mouse-select-window on
 # tmux attach-session -t <session-name>
 # tmux ls
 # tmux kill-session -t <xxx>
+
+#Split Screen into 2 Panes:
+#Ctrl-b %
+#Split current Pane horizontally into 2 Panes:
+#Ctrl-b "
+#Switch between Panes:
+#Ctrl-b o
+#Create new Window:
+#Ctrl-b c
+#Switch between Windows:
+#Ctrl-b n  # next
+#Ctrl-b p  # previous
+#Detach from Session:
+#Ctrl-b d
+#Re-attach to a Session:
+#tmux attach -t [session-name]
+#Create a Session:
+#tmux new -s [session-name]
+#Switch between Sessions:
+#tmux switch -t [session-name]
+#Switch between Sessions within Tmux:
+#Ctrl-b (      # previous session
+#Ctrl-b )      # next session
+#Ctrl-b L      # ‘last’ (previously used) session
+#Ctrl-b s      # choose a session from a list
+#List Sessions:
+#tmux list-sessions
+#List all commands:
+#Ctrl-b ?    
+
