add new comments: install tmux in mac

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,9 @@ setw -g mouse-select-window on
 # tmux ls
 # tmux kill-session -t <xxx>
 
+# install tmux in mac
+# brew install tmux
+
 #Split Screen into 2 Panes:
 #Ctrl-b %
 #Split current Pane horizontally into 2 Panes:
